--- a/index.html
+++ b/index.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Day 1-HTML</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Day 2 - CSS Basics</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Day 2 - HTML</h1>
-    <p>I am learning the web development because I want to build websites and applications. I have been trying learn HTML CSS,Js,NodeJS,ReactJS and all the tech stack which is been used in to make websites. After all the final reason is to make a career in this field and also to make money.</p>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>NodeJS</li>
-        <li>ReactJS</li>
-    </ul>
-    <form action="">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <input type="submit" value="Submit">
-    </form>
-    <br>
-    <div class="card-container">
-  <div class="card">
-    <h3>Card Title</h3>
-    <p>Short description of the card content goes here.</p>
-  </div>
 
-  <div class="card">
-    <h3>Another Card</h3>
-    <p>This card adjusts automatically with Flexbox.</p>
-  </div>
+  <h1>Day 2 - CSS Basics</h1>
 
-  <div class="card">
-    <h3>Third Card</h3>
-    <p>Responsive, modern, and easy to customize.</p>
+  <p>
+    I am learning web development because I want to build websites and applications.
+    I am learning HTML, CSS, JavaScript, Node.js, and React to build a career in this field.
+  </p>
+
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>NodeJS</li>
+    <li>ReactJS</li>
+  </ul>
+
+  <form>
+    <label for="name">Name</label>
+    <input type="text" id="name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+
+    <input type="submit" value="Submit">
+  </form>
+
+  <div class="card-container">
+    <div class="card">
+      <h3>Card Title</h3>
+      <p>Short description of the card content goes here.</p>
+    </div>
+
+    <div class="card">
+      <h3>Another Card</h3>
+      <p>This card adjusts automatically with Flexbox.</p>
+    </div>
+
+    <div class="card">
+      <h3>Third Card</h3>
+      <p>Responsive, modern, and easy to customize.</p>
+    </div>
   </div>
-</div>
 
 </body>
 </html>
