--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Day 2 - CSS Basics</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <h1>Day 2 - CSS Basics</h1>
@@ -25,10 +27,10 @@
 
   <form>
     <label for="name">Name</label>
-    <input type="text" id="name" required>
+    <input type="text" id="name" name="name" required>
 
     <label for="email">Email</label>
-    <input type="email" id="email" required>
+    <input type="email" id="email" name="email" required>
 
     <input type="submit" value="Submit">
   </form>
@@ -51,4 +53,5 @@
   </div>
 
 </body>
+
 </html>
